--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "declaration": true
   },
-  "include": ["src", "src/tests"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["src/tests/**/*"]
 }
